Alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -1099,8 +1099,8 @@ input:checked + .toggle-bg {
   top: auto !important;
 }
 
-.-bottom-\[350px\] {
-  bottom: -350px;
+.-bottom-\[290px\] {
+  bottom: -290px;
 }
 
 .-bottom-\[47px\] {
@@ -1115,8 +1115,8 @@ input:checked + .toggle-bg {
   left: -15px;
 }
 
-.-left-\[500px\] {
-  left: -500px;
+.-left-\[400px\] {
+  left: -400px;
 }
 
 .-right-6 {
@@ -1559,6 +1559,10 @@ input:checked + .toggle-bg {
   margin-top: 2.5rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -1585,10 +1589,6 @@ input:checked + .toggle-bg {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .mt-8 {
@@ -1994,6 +1994,10 @@ input:checked + .toggle-bg {
   width: 1.25rem;
 }
 
+.w-56 {
+  width: 14rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -2086,6 +2090,10 @@ input:checked + .toggle-bg {
   width: 550px;
 }
 
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .w-\[600px\] {
   width: 600px;
 }
@@ -2106,6 +2114,10 @@ input:checked + .toggle-bg {
   width: 76px;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .w-\[800px\] {
   width: 800px;
 }
@@ -2120,10 +2132,6 @@ input:checked + .toggle-bg {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-56 {
-  width: 14rem;
 }
 
 .min-w-0 {
@@ -2153,10 +2161,6 @@ input:checked + .toggle-bg {
 
 .max-w-2xl {
   max-width: 42rem;
-}
-
-.max-w-3xl {
-  max-width: 48rem;
 }
 
 .max-w-4xl {
@@ -3713,6 +3717,11 @@ input:checked + .toggle-bg {
   background-color: rgb(19 143 130 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#1a1e1f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 30 31 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#213438\] {
   --tw-bg-opacity: 1;
   background-color: rgb(33 52 56 / var(--tw-bg-opacity));
@@ -3726,6 +3735,11 @@ input:checked + .toggle-bg {
 .bg-\[\#34DA89\] {
   --tw-bg-opacity: 1;
   background-color: rgb(52 218 137 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#353b3c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 59 60 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#38D6CB\] {
@@ -4064,6 +4078,10 @@ input:checked + .toggle-bg {
   padding: 0.625rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -4101,6 +4119,11 @@ input:checked + .toggle-bg {
 .px-0\.5 {
   padding-left: 0.125rem;
   padding-right: 0.125rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-12 {
@@ -4183,9 +4206,19 @@ input:checked + .toggle-bg {
   padding-bottom: 0.375rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .py-2 {
@@ -4246,11 +4279,6 @@ input:checked + .toggle-bg {
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 .pb-0 {
@@ -5594,6 +5622,26 @@ li:hover > button svg {
   background-color: transparent;
 }
 
+.placeholder\:text-lg::-moz-placeholder {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.placeholder\:text-lg::placeholder {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.placeholder\:text-\[\#4d4d4d\]::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(77 77 77 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-\[\#4d4d4d\]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(77 77 77 / var(--tw-text-opacity));
+}
+
 .before\:pointer-events-none::before {
   content: var(--tw-content);
   pointer-events: none;
@@ -5760,6 +5808,11 @@ li:hover > button svg {
   background-color: rgb(0 96 141 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#008391\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 131 145 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#009688\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 150 136 / var(--tw-bg-opacity));
@@ -5816,6 +5869,11 @@ li:hover > button svg {
   font-weight: 700;
 }
 
+.hover\:text-\[\#008391\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 131 145 / var(--tw-text-opacity));
+}
+
 .hover\:text-\[\#3b71ca\]:hover {
   --tw-text-opacity: 1;
   color: rgb(59 113 202 / var(--tw-text-opacity));
@@ -5844,11 +5902,6 @@ li:hover > button svg {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#008391\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 131 145 / var(--tw-text-opacity));
 }
 
 .hover\:\!opacity-90:hover {
@@ -7125,10 +7178,22 @@ li:hover > button svg {
     margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(4rem * var(--tw-space-x-reverse));
+    margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-64 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(16rem * var(--tw-space-x-reverse));
+    margin-left: calc(16rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -7185,6 +7250,10 @@ li:hover > button svg {
     margin-right: 8rem;
   }
 
+  .lg\:mr-44 {
+    margin-right: 11rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -7211,14 +7280,6 @@ li:hover > button svg {
 
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:w-\[800px\] {
-    width: 800px;
-  }
-
-  .lg\:w-\[1080px\] {
-    width: 1080px;
   }
 
   .lg\:w-\[1280px\] {
@@ -7359,6 +7420,10 @@ li:hover > button svg {
     padding-bottom: 1rem;
   }
 
+  .lg\:pr-44 {
+    padding-right: 11rem;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -7379,6 +7444,16 @@ li:hover > button svg {
     line-height: 1;
   }
 
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .lg\:leading-snug {
     line-height: 1.375;
   }
@@ -7389,10 +7464,6 @@ li:hover > button svg {
 }
 
 @media (min-width: 1440px) {
-  .xl\:w-1\/2 {
-    width: 50%;
-  }
-
   .xl\:max-w-full {
     max-width: 100%;
   }
@@ -7403,16 +7474,6 @@ li:hover > button svg {
 
   .xl\:flex-row {
     flex-direction: row;
-  }
-
-  .xl\:justify-between {
-    justify-content: space-between;
-  }
-
-  .xl\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .xl\:space-x-12 > :not([hidden]) ~ :not([hidden]) {
@@ -7442,21 +7503,6 @@ li:hover > button svg {
   .xl\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .xl\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
-
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 }
 
